--- a/index.html
+++ b/index.html
@@ -1,22 +1,225 @@
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="my.css">
-    <title></title>
-  </head>
-  <body>
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT&family=Quicksand&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.15-rc1/mediaelementplayer.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+  <title>Week 4</title>
+</head>
+
+<body>
+  <header class="header">
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand d-lg-none" href="/"><img src="logo.svg" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <span class="navbar-toggler-icon"></span> -->
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Programs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Video</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Nutrition facts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+        <a class="navbar-brand d-none d-lg-block" href="/"><img src="logo.svg" alt="logo"></a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="hero-img mb-5" style="background-image:url('media/img/back-img.jpg')">
+      <h1 class="hero-h1 h1">Taste <br>Pretzelitious!</h1>
+    </section>
+    <div class="container">
+      <section class="picto-sec row mb-3">
+        <article class="col-md-4 picto-wrap mb-3">
+          <div class="picto-img mb-3"><img src="media/icons/cupcake.svg" alt="cupcake-icon"></div>
+          <h3 class="h3">Sweet Program</h3>
+          <p>
+            Sweet Program Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et id tenetur ducimus recusandae
+            aliquam a fugit nisi ratione qui reprehenderit. Assumenda quasi vitae consequuntur vel rerum amet ratione
+            quae laboriosam?
+          </p>
+        </article>
+        <article class="col-md-4 picto-wrap mb-3">
+          <div class="picto-img mb-3"><img src="media/icons/bread.svg" alt="bread-icon"></div>
+          <h3 class="h3">Dough Program</h3>
+          <p>
+            Dough Program Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et id tenetur ducimus recusandae
+            aliquam a fugit nisi ratione qui reprehenderit. Assumenda quasi vitae consequuntur vel rerum amet ratione
+            quae laboriosam qui reprehenderit.Aamet consectetur adipisicing elit.
+          </p>
+        </article>
+        <article class="col-md-4 picto-wrap mb-3">
+          <div class="picto-img mb-3"><img src="media/icons/sandwich.svg" alt="sandwich-icon"></div>
+          <h3 class="h3">Sandwich Program</h3>
+          <p>
+            Sandwich Program Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et id tenetur ducimus recusandae
+            aliquam a fugit nisi ratione qui reprehenderit. Assumenda quasi vitae consequuntur vel rerum amet ratione
+            quae laboriosam nisi ratione?
+          </p>
+        </article>
+      </section>
+      <section class="video-wrap mb-5">
+        <video src="media/video/video.mp4" poster="media/img/video-poster.jpg" controls></video>
+        <!-- <button type="button" class="play-btn"><img src="media/icons/play.svg" alt="play-btn" ></button>-->
+      </section>
+      <section class="table-wrap mb-5 full-width-div">
+        <div class="container">
+          <table class="table table-responsive-sm">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Calories</th>
+                <th scope="col">Per grams</th>
+                <th scope="col">Per serving</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Total fat</th>
+                <td>105</td>
+                <td>1%</td>
+                <td>3%</td>
+              </tr>
+              <tr>
+                <th scope="row">Cholesterol</th>
+                <td>222</td>
+                <td>2%</td>
+                <td>5%</td>
+              </tr>
+              <tr>
+                <th scope="row">Sodium</th>
+                <td>145</td>
+                <td>0.3%</td>
+                <td>0.6%</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </section>
+      <section class="form-wrap mb-5">
+        <form class="needs-validation form-contact" novalidate autocomplete="off">
+          <div class="container-fluid">
+            <h2 class="text-center mb-5">Contact us!</h2>
+            <div class="row">
+              <div class="form-group col-lg-6">
+                <label for="inputFirstNameApp">Name</label>
+                <input type="text" class="form-control" id="inputFirstName" placeholder="" required>
+                <div class="invalid-tooltip">
+                  This field is required
+                </div>
+              </div>
+              <div class="form-group col-lg-6">
+                <label for="inputLastName">Last Name</label>
+                <input type="text" class="form-control" id="inputLastName" placeholder="" required>
+                <div class="invalid-tooltip">
+                  This field is required
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="form-group col-lg-6">
+                <label for="inputEmail">Email address</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com" required>
+                <div class="invalid-tooltip">
+                  Please enter correct format
+                </div>
+              </div>
+              <div class="form-group col-lg-6">
+                <label for="validationCustom08">Phone</label>
+                <input type="tel" placeholder="Format: 1234567890" pattern=".{10}" class="form-control"
+                  id="validationCustom08" oninput="check(this)">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="position">Reason for conatact</label>
+              <select class="form-control" id="position">
+                <option value="">Please select</option>
+                <option value="Front End Developer">I want to order</option>
+                <option value="Back End Developer">Questions about delivery</option>
+                <option value="UI/UX Designer">Complains</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <div class="custom-control custom-check">
+                <input type="checkbox" id="customCheck1" name="customCheck" class="custom-control-input">
+                <label class="custom-control-label" for="customCheck1">I live in the USA</label>
+              </div>
+            </div>
+            <div class="form-group textarea-group">
+              <label for="textarea">What is on your mind?</label>
+              <textarea class="form-control" id="textarea" rows="4"></textarea>
+            </div>
+            <div class="form-group text-center">
+              <button type="submit" class="btn btn-primary btn-lg">Send</button>
+            </div>
+          </div>
+        </form>
+      </section>
+
+      <footer>
+        <ul>
+          <li><a href="javascript:;"></a></li>
+        </ul>
+      </footer>
+
+    </div>
+
+  </main>
+
+  <footer class="footer">
+    <ul class="social">
+      <li><a href="javascript:;" class="fa fa-facebook"></a></li>
+      <li><a href="javascript:;" class="fa fa-twitter"></a></li>
+      <li><a href="javascript:;" class="fa fa-instagram"></a></li>
+    </ul>
+    <a href="mailto:pretzelicious@gmail.com" class="email">pretzelicious@gmail.com</a>
+    <a href="javascript:;" class="logo"><img src="pretz-logo-w.svg" alt="logo"></a>
+    <small>&copy; Martina Pantelic</small>
+  </footer>
+
+  <!-- Optional JavaScript -->
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src ="./js/index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+  </script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script> -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  <!-- video library-->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.15-rc1/mediaelement-and-player.min.js"></script> -->
+  <script src="script.js"></script>
+</body>
+
 </html>
