broken contact form link fix

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link" href="#table">Nutrition facts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#video">Contact</a>
+            <a class="nav-link" href="#form">Contact</a>
           </li>
         </ul>
         <a class="navbar-brand d-none d-lg-block" href="/"><img src="logo.svg" alt="logo"></a>
